--- a/meet.html
+++ b/meet.html
@@ -170,7 +170,7 @@
                     <p class="bio mt-3">Bio to come</p>
             </div>
 
-            <div class="team-card">
+            <div class="team-card mb-20">
                 <img src="./images/david sain.jpeg" alt="Team Member 2">
                     <h3 class="heading text-3xl text-primary mt-3">David Sain</h3>
                     <p class="bio mt-3">Bio to come</p>
