--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                             <img src="./images/home-svgrepo-com.svg" class="w-[20px]" alt="">
                             <a target="_blank">PO Box 6213 46896</a>
                         </li>
-                        
+
                         <li class="flex items-center gap-2">
                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
                                 height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
@@ -1317,8 +1317,8 @@
                 <p class="p text-center sm:text-start text-white ">© 2024 Copeland Contracting. All Rights Reserved
                 </p>
                 <div class="p flex justify-center gap-3 text-white">
-                    <a href="terms-of-service" onclick="scrollToTop()">Terms of Service</a>
-                    <a href="privacy-policy" onclick="scrollToTop()">Privacy Policy</a>
+                    <a href="./terms.html" >Terms of Service</a>
+                    <a href="./privacy.html" >Privacy Policy</a>
                 </div>
             </div>
         </div>
