--- a/privacy.html
+++ b/privacy.html
@@ -99,7 +99,7 @@
         </div>
     </header>
 
-    <section class="px-[5%] flex flex-col items-center justify-center py-10">
+    <section class="flex flex-col items-center justify-center py-10">
         <div class="w-full sm:w-3/4 flex flex-col p-4 items-center gap-10">
             <h2 class="text-3xl lg:text-8xl text-primary heading text-center">Privacy Policy</h2>
             <div>
