--- a/terms.html
+++ b/terms.html
@@ -101,9 +101,9 @@
 
     <section class="bg-secondaryColor flex flex-col items-center justify-center py-10 px-[5%]">
         <div class="w-full md:w-3/4 flex flex-col items-center gap-10">
-            <h2 class="heading text-3xl lg:text-8xl text-primary text-center">Terms of Service</h2>
+            <h2 class="heading text-5xl lg:text-8xl text-primary text-center">Terms of Service</h2>
             <div>
-                <h4 class="text-xl lg:text-3xl text-black text-center">
+                <h4 class="text-lg font-semibold opacity-80 lg:text-3xl text-black text-center">
                     Last updated September 28, 2024. </h4>
             </div>
             <hr class="border-t-2 border-t-zinc-800 w-full" />
