--- a/privacy.html
+++ b/privacy.html
@@ -101,9 +101,9 @@
 
     <section class="flex flex-col items-center justify-center py-10">
         <div class="w-full sm:w-3/4 flex flex-col p-4 items-center gap-10">
-            <h2 class="text-3xl lg:text-8xl text-primary heading text-center">Privacy Policy</h2>
+            <h2 class="text-5xl lg:text-8xl text-primary heading text-center">Privacy Policy</h2>
             <div>
-                <h4 class="text-xl lg:text-3xl text-black text-center">Last updated September 28th, 2024 </h4>
+                <h4 class="text-lg font-semibold opacity-80 lg:text-3xl text-black text-center">Last updated September 28th, 2024 </h4>
             </div>
             <hr class="border-t-2 border-t-zinc-800 w-full" />
             <div class="flex flex-col gap-5">
