--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <nav class="desktop-menu hidden lg:flex gap-5 items-center">
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">Our History</a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./projects.html">Projects</a>
                 <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
                         <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
@@ -96,7 +96,7 @@
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./meet.html">Meet The Team </a>
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">Our History</a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./gallery.html">Gallery</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./projects.html">Projects</a>
             </nav>
         </div>
     </header>
@@ -204,7 +204,7 @@
         </section>
 
         <!-- Contact us -->
-        <section class="px-[5%] py-20 lg:px-[25%] ">
+        <section class="px-[5%] pb-10 lg:px-[25%] mt-32">
             <div class="flex flex-col gap-5 items-center text-center">
                 <h3 class="heading text-4xl uppercase">
                     Contact Us Today
@@ -239,7 +239,7 @@
                 <div class="md:px-5 lg:px-10 px-0 flex justify-center">
                     <form name="Service Request Form" action="https://api.web3forms.com/submit" method="POST"
                         class="bg-secondaryColor border-t-3 border-t-zinc-700 pt-5">
-                        <input type="hidden" name="access_key" value="c0096340-e3b1-4c05-ba5c-bc2a1769c726" />
+                        <input type="hidden" name="access_key" value="c7335c7d-b80c-40fa-a578-4bb8719a22b2" />
 
                         <div class="grid sm:grid-cols-2 gap-5">
                             <div class="flex flex-col">
