--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 </head>
 
 <body>
-    <header class="">
+
+   <header class="">
         <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
             <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d"
                 class="bg-black rounded-md ">
@@ -54,7 +55,7 @@
             <nav class="desktop-menu hidden lg:flex gap-5 items-center">
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">Our History</a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./projects.html">Projects</a>
                 <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
                         <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
@@ -95,10 +96,11 @@
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./meet.html">Meet The Team </a>
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">Our History</a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./gallery.html">Gallery</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./projects.html">Projects</a>
             </nav>
         </div>
     </header>
+
 
     <main>
 
@@ -985,7 +987,7 @@
                 <div class="md:px-5 lg:px-10 px-0 flex justify-center">
                     <form name="Service Request Form" action="https://api.web3forms.com/submit" method="POST"
                         class="bg-secondaryColor border-t-3 border-t-zinc-700 pt-5">
-                        <input type="hidden" name="access_key" value="c0096340-e3b1-4c05-ba5c-bc2a1769c726" />
+                        <input type="hidden" name="access_key" value="c7335c7d-b80c-40fa-a578-4bb8719a22b2" />
 
                         <div class="grid sm:grid-cols-2 gap-5">
                             <div class="flex flex-col">
