--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
                 <h1 class="text-4xl lg:text-8xl heading text-primary ">OUR PROJECTS</h1>
                 <div class="flex flex-col justify-between w-full mt-6">
                     <!-- Filter buttons -->
-                    <div class="sticky top-10 text-[16px] lg:text-[20px] flex gap-5 justify-center items-center flex-wrap">
+                    <div class="text-[16px] lg:text-[20px] flex gap-5 justify-center items-center flex-wrap">
                         <h5 class="opacity-80 links" data-category="all">All</h5>
                         <h5 class="text-black links" data-category="new-construction">New Construction</h5>
                         <h5 class="text-black links" data-category="service">Service</h5>
@@ -136,7 +136,7 @@
         </section>
 
         <!-- Contact us -->
-        <section class="px-[5%] pb-10 lg:px-[25%] mt-52">
+        <section class="px-[5%] pb-10 lg:px-[25%] mt-20 lg:mt-42">
             <div class="flex flex-col gap-5 items-center text-center">
                 <h3 class="heading text-4xl uppercase">
                     Contact Us Today
