added business card

--- a/meet.html
+++ b/meet.html
@@ -172,6 +172,9 @@
                         He likes meeting new people, networking, and providing a professional service to the greater Ft Wayne area. <br> <br>
                         He has been married for 1 year and enjoys providing for his family. His plan is to continue to grow his business in anticipation of having his wife work for the company managing the office end of this operation. This is especially important to him.
                     </p>
+                   <div class="mt-5">
+                    <img src="./images/shawn-business-card.jpeg" style="height: 200px;" alt="">
+                   </div>
             </div>
 
             <div class="team-card mb-20">
