--- a/meet.html
+++ b/meet.html
@@ -159,7 +159,7 @@
 
         <h4 class="heading text-primary text-6xl uppercase block py-10 text-center">Our Team</h4>
 
-        <section class="team-section">
+        <section class="team-section mt-20">
             <div class="team-card">
                 <img src="./images/Danielle Copeland.jpeg" alt="Team Member 1">
                 <h3 class="heading text-3xl text-primary mt-3">Danielle Copeland</h3>
