--- a/projects.html
+++ b/projects.html
@@ -109,9 +109,9 @@
                     <!-- Filter buttons -->
                     <div class="text-[16px] lg:text-[20px] flex gap-5 justify-center items-center flex-wrap">
                         <h5 class="opacity-80 links" data-category="all">All</h5>
-                        <h5 class="text-black links" data-category="new-construction">New Construction</h5>
+                        <!-- <h5 class="text-black links" data-category="new-construction">New Construction</h5>
                         <h5 class="text-black links" data-category="service">Service</h5>
-                        <h5 class="text-black links" data-category="remodel">Remodel</h5>
+                        <h5 class="text-black links" data-category="remodel">Remodel</h5> -->
                     </div>
                     <!-- News items -->
                     <div class="bento mt-20" id="news-container">
