--- a/projects.html
+++ b/projects.html
@@ -127,8 +127,13 @@
                         <div class="news news4" data-category="service">
                             <img src="./images/boiler-E899983A-1457-4C13-89F2-F197DC66442F-logo.jpg" alt="">
                         </div>
+
                         <div class="news news4" data-category="remodel">
                             <img src="./images/david sain.jpeg " alt="">
+                        </div>
+
+                        <div class="news news4" data-category="all">
+                            <video src="./images/new gas line.mp4" controls muted class="h-[300px] w-[300px]"></video>
                         </div>
                     </div>
                 </div>
