--- a/meet.html
+++ b/meet.html
@@ -178,20 +178,12 @@
             <div class="team-card">
                 <img src="./images/Shawn hagler.jpeg" alt="Team Member 2">
                 <h3 class="heading text-3xl text-primary mt-3">Shawn Hagler</h3>
-                <p class="bio mt-3">Shawn Hagler is a challenge-driven professional, who brings more than 15 years of
-                    proven experience as a business owner. Shawn is currently the sole proprietor, owning and operating
-                    Homes by Hagler. Shawn has worked in maintenance and learned of the shortage of plumbers in the
-                    area. He decided to add to his professional arsenal and joined the Local 227 as an apprentice and
-                    joined the class room portion of this trainings as soon as possible. He is a licensed plumbing apprentice from
-                    2021 to present. <br><br>
-                    Shawn has been a licensed carpenter since 1998. He has been working as a plumber since 2021. He
-                    finished the class work portion toward becoming a plumber in 2024. He is continuing his schooling
-                    past being a journeyman to be a Master Plumber. <br> <br>
-                    He likes meeting new people, networking, and providing a professional service to the greater Ft
-                    Wayne area. <br> <br>
-                    He has been married for 1 year and enjoys providing for his family. His plan is to continue to grow
-                    his business in anticipation of having his wife work for the company managing the office end of this
-                    operation. This is especially important to him.
+                <p class="bio mt-3">Shawn Hagler is a challenge-driven professional, who brings more than 15 years of proven experience as a business owner. Shawn is currently the sole proprietor, owning and operating Homes by Hagler. Shawn has worked in maintenance and learned of the shortage of plumbers in the area.
+                    <br> <br>
+                    He decided to add to his professional arsenal and joined the Local 227 as an apprentice and joined the class room portion of this trainings as soon as possible. He is a licensed plumbing apprentice from 2021 to present. Shawn has been a licensed carpenter since 1998. He has been working as a plumber since 2021. 
+                    <br> <br> He finished the class work portion toward becoming a plumber in 2024. He is continuing his schooling past being a journeyman to be a Master Plumber. He likes meeting new people, networking, and providing a professional service to the greater Ft Wayne area.
+
+
                 </p>
                 <div class="mt-5">
                     <img src="./images/shawn-business-card.jpeg" style="height: 200px;" alt="">
