--- a/projects.html
+++ b/projects.html
@@ -115,25 +115,11 @@
                     </div>
                     <!-- News items -->
                     <div class="bento mt-20" id="news-container">
-                        <div class="news news1" data-category="new-construction">
-                            <img src="./images/cynthia copeland.jpeg" alt="">
-                        </div>
-                        <div class="news news2" data-category="new-construction">
-                            <img src="./images/why-choose-img.jpeg" alt="">
-                        </div>
-                        <div class="news news3" data-category="service">
-                            <img src="./images/Shawn hagler.jpeg" alt="">
-                        </div>
-                        <div class="news news4" data-category="service">
-                            <img src="./images/boiler-E899983A-1457-4C13-89F2-F197DC66442F-logo.jpg" alt="">
-                        </div>
-
-                        <div class="news news4" data-category="remodel">
-                            <img src="./images/david sain.jpeg " alt="">
-                        </div>
-
                         <div class="news news4" data-category="all">
-                            <video src="./images/new gas line.mp4" controls muted class="h-[300px] w-[300px]"></video>
+                            <video src="./images/new gas line.mp4" controls muted class="h-[300px] w-full"></video>
+                            <div class="info">
+                                NEW GAS LINE FOR HOME ADDITION
+                           </div>
                         </div>
                     </div>
                 </div>
