--- a/projects.html
+++ b/projects.html
@@ -116,10 +116,13 @@
                     <!-- News items -->
                     <div class="bento mt-20" id="news-container">
                         <div class="news news4" data-category="all">
-                            <video src="./images/new gas line.mp4" controls muted class="h-[300px] w-full"></video>
+                            <video src="./images/new gas line.mp4" class="video-player h-[300px] w-full"></video>
                             <div class="info">
                                 NEW GAS LINE FOR HOME ADDITION
                            </div>
+                           <img src="./images/play.svg" style="width: 30px; height: 30px;"
+                           class="play-btn z-[100] absolute top-1/2 left-1/2 z-10 -translate-x-1/2 -translate-y-1/2 cursor-pointer"
+                           alt="Play Button">
                         </div>
                     </div>
                 </div>
