--- a/projects.html
+++ b/projects.html
@@ -417,7 +417,7 @@
     <footer class="px-[5%] bg-black">
         <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
             <div class="flex w-full flex-col lg:flex-row gap-10 justify-between">
-                <a href="/" class="img-container flex items-center justify-center">
+                <a href="/" class="img-container flex items-center justify-center" onclick="scrollToTop()">
                     <img src="./images/logo.png" alt="logo" width="250" height="250" />
                 </a>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 items-center justify-center">
@@ -444,14 +444,10 @@
                             <a href="tel:+1(260) 744-1944" target="_blank">Office: 260-744-1944</a>
                         </li>
                         <li class="flex items-center gap-2">
-                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
-                                height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z">
-                                </path>
-                            </svg>
+                            <img src="./images/fax.svg" class="invert w-[20px]" alt="">
                             <a href="tel:+1(260) 744-1955" target="_blank">Fax: 260-744-1955</a>
                         </li>
+                    
                         <li class="flex items-center gap-2">
                             <img src="./images/home-svgrepo-com.svg" class="w-[20px]" alt="">
                             <a target="_blank">PO Box 6213 46896</a>
